fixed bufg where navigation links covered other dom elements

--- a/style.css
+++ b/style.css
@@ -67,9 +67,6 @@ body {
     right: 1.5vw;
     top: 20px;
     cursor: pointer;
-    /* background-color: #5AB1BB;
-    padding: 15px 10px 10px 10px;
-    border-radius: 50%; */
 }
 .menu-icon__line {
     height: 2px;
@@ -120,18 +117,18 @@ body {
     text-align: center;
     font-size: calc(2vw + 10px);
     font-weight: 200;
-    /* cursor: pointer; */
     font-family: droid-reg;
     color: #F7ECE1;
 }
+
 
 .nav__list-item {
     position: relative;
     display: inline-block;
     transition-delay: 0.8s;
     opacity: 0;
-    /* display: none; */
     /* added this */
+    position: absolute;
     transform: translate(0%, 100%);
     transition: opacity 0.2s ease, transform 0.3s ease;
     margin-right: 25px;
@@ -190,7 +187,7 @@ body.nav-active .nav:before {
 
 body.nav-active .nav__list-item {
     opacity: 1;
-    /* display: inline-block; */
+    position: initial;
     cursor: pointer;
     transform: translateX(0%);
     transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
@@ -283,7 +280,7 @@ body.nav-active .nav__list-item:nth-child(4) {
     outline: none;
     /* width: 8vw; */
     padding: 5px 12px;
-    background-color: #313B72;
+    background-color: #5AB1BB;
     cursor: pointer;
     color: #F7ECE1;
     margin: 0px 10px 0px 10px;
